--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
   },
   "scripts": {
     "build": "hardhat compile",
-    "deploy": "hardhat deploy --network $NETWORK",
-    "fund": "hardhat deploy --tags fund --network $NETWORK",
-    "prettier": "prettier --write \"./**/*.{json,js,md,sol}\"",
-    "request-uint256": "hardhat run scripts/requestUint256.js --network $NETWORK",
-    "request-uint256-array": "hardhat run scripts/requestUint256Array.js --network $NETWORK"
+    "request:uint256": "hardhat run scripts/requestUint256.js --network $NETWORK",
+    "request:uint256-array": "hardhat run scripts/requestUint256Array.js --network $NETWORK",
+    "run:deploy": "hardhat deploy --network $NETWORK",
+    "run:fund": "hardhat deploy --tags fund --network $NETWORK",
+    "prettier": "prettier --write \"./**/*.{json,js,md,sol}\""
   },
   "devDependencies": {
     "@api3/airnode-admin": "^0.5.0",
