--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "scripts": {
     "build": "hardhat compile",
+    "deploy": "hardhat deploy --network $NETWORK",
     "request:uint256": "hardhat run scripts/requestUint256.js --network $NETWORK",
     "request:uint256-array": "hardhat run scripts/requestUint256Array.js --network $NETWORK",
-    "run:deploy": "hardhat deploy --network $NETWORK",
     "run:fund": "hardhat deploy --tags fund --network $NETWORK",
     "prettier": "prettier --write \"./**/*.{json,js,md,sol}\""
   },
@@ -19,6 +19,7 @@
     "@api3/airnode-protocol": "^0.5.0",
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-waffle": "^2.0.2",
+    "@openzeppelin/contracts": "4.4.2",
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
